# uav_ros_gui

./: CMakeLists.txt  package.xml  plugin.xml  setup.py
config/: brick_pickup.rviz  building_layout.perspective
include/uav_ros_gui/: uav_operator_panel.hpp  uav_ros_api.hpp
launch/: rqt.launch  uav_ros_gui.launch
scripts/: uav_ros_gui
src/: uav_ros_api.cpp
src/uav_ros_gui/: uav_operator_panel.cpp  uav_operator_panel.ui
